# xray-lite

./: .gitignore  Cargo.toml  Cargo.toml.backup  DESIGN.md  GITHUB_UPLOAD.md  LICENSE  README.md  REALITY_FINAL_RECOMMENDATION.md  REALITY_IMPLEMENTATION_DIRECTION.md  REALITY_TLS_LIBRARY_RESEARCH.md  RUSTLS_REALITY_IMPLEMENTATION_PLAN.md  RUSTLS_REALITY_PROGRESS.md  RUSTLS_REALITY_TECHNICAL_PLAN.md  RUSTLS_REALITY_TODAY_SUMMARY.md  UPLOAD_GUIDE.md  USAGE.md  build_release.sh  config.example.json  config.test.json  deploy.sh  install.sh  install_service.sh  publish_now.sh  test_reality_basic.sh  test_xray_integration.sh  upload_now.sh  verify_hmac.rs  verify_keys.sh  vless-reality.service  xray-client-config.json
examples/: reality_auth_demo.rs
src/: handler.rs  lib.rs  main.rs  server.rs
src/config/: mod.rs  validator.rs
src/network/: connection.rs  mod.rs
src/protocol/: mod.rs  proxy_protocol.rs  sniffer.rs
src/protocol/vless/: address.rs  codec.rs  mod.rs  request.rs  response.rs
src/transport/: mod.rs
src/transport/reality/: auth.rs  boring_prototype.rs  crypto.rs  handshake.rs  hello_parser.rs  mod.rs  rustls_research.rs  server.rs  server_rustls.rs  stream.rs  tls.rs
src/transport/xhttp/: grpc.rs  h2.rs  mod.rs  server.rs
src/utils/: crypto.rs  error.rs  mod.rs
tests/: reality_integration.rs
