[package]
name = "xray-lite"
version = "0.2.78"
edition = "2021"
authors = ["Undead <undead-undead@github.com>"]
description = "Lightweight VLESS+Reality+XHTTP proxy implementation in Rust, featuring anti-probing and raw pipe transport."
license = "MIT"
repository = "https://github.com/undead-undead/xray-lite"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
rustls-pki-types = "1"

# HTTP/2
h2 = "0.4"
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"

# 加密
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.18"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 网络工具
bytes = "1.5"
futures = "0.3"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"

# 其他
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
rcgen = "0.12"


[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "vless-server"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "genconfig"
path = "src/bin/genconfig.rs"


[patch.crates-io]
rustls = { path = "./rustls-reality/rustls" }
